2009-04-28  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/defines.h: Include <utmpx.h> and <utmp.h> to define
	USER_NAME_MAX_LENGTH.

2009-04-28  Nicolas François  <nicolas.francois@centraliens.net>

	* src/login.c: Change a snprintf() to strncpy(). There are no
	format.

2009-04-28  Nicolas François  <nicolas.francois@centraliens.net>

	* src/passwd.c: Harmonize status report at the end of passwd.
	Prefix the messages with "passwd: ", only indicate a password
	change if the password was actually changed, and password
	properties changed otherwise.

2009-04-28  Nicolas François  <nicolas.francois@centraliens.net>

	* src/chgpasswd.c, src/newusers.c: There is no need to test for 0
	after getopt_long. No options have flag != NULL.

2009-04-28  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/prototypes.h: Replace #if by #ifdef
	* libmisc/Makefile.am, lib/prototypes.h,
	libmisc/non_interactive_pam_conv.c: Added
	non_interactive_pam_conv() and non_interactive_password.

2009-04-28  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/utmp.c, src/userdel.c, src/logoutd.c: Replace #if by #ifdef

2009-04-28  Nicolas François  <nicolas.francois@centraliens.net>

	* src/vipw.c: Harmonize messages.

2009-04-28  Nicolas François  <nicolas.francois@centraliens.net>

	* src/lastlog.c: Replace atoi() by getulong().

2009-04-28  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/failure.h: Replace HAVE_UTMPX_H by USE_UTMPX.

2009-04-28  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/rlogin.c: Replace atoi() by getulong().

2009-04-28  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/failure.c: Replace HAVE_UTMPX_H by USE_UTMPX.

2009-04-28  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/chkname.c: Do not include <utmp.h> and <utmpx.h>. There
	are no more needed.

2009-04-28  Nicolas François  <nicolas.francois@centraliens.net>
