@@ -13,6 +13,11 @@ shadow-4.1.3.1 -> shadow-4.1.3.2					UNRELEASED
     user to update his authentication token if needed.
 - lastlog
   * Fix regression causing empty reports.
+- chpasswd
+  * Change the passwords using PAM. This permits to define the password
+    policy in a central place. The -c/--crypt-method, -e/--encrypted,
+    -m/--md5, -s/--sha-rounds are no more supported on PAM enabled
+    systems.
 
 *** translation
  - Updated Korean translation
